# click-skeleton

./: .coveragerc  .gitignore  README.md  README.rst  code-format.sh  full-check.sh  gen-deps.sh  gen-doc.sh  linting.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  security-checks.sh  setup.py
.githooks/: pre-commit
click_skeleton/: __init__.py  __main__.py  advanced_group.py  backtrace.py  completion.py  config.py  core.py  decorators.py  defaults.py  doc.py  exceptions.py  expanded_path.py  helpers.py  importdir.py  skel.py  testing.py  version.py  version_checker.py
doc/: help.rst
examples/: __init__.py  cli.py  main.py
examples/commands/: subgroup.py
standard_examples/: cli.py
tests/: test_cli.py  test_helpers.py  test_version_checker.py
