[tool.poetry]
name = "click-skeleton"
version = "0.30.1"
description = "Click app skeleton"
authors = ["Adrien Pensart"]


[tool.ruff]
lint.ignore = ["E501"]

[tool.pyright]
include = [
    "click_skeleton",
    "examples",
    "standard_examples"
]
reportGeneralTypeIssues = false
reportIncompatibleMethodOverride = false
reportUnusedCallResult = true
reportAssignmentType = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
click-option-group = "^0.5.1"
click-aliases = "^1.0.1"
semver = "^3.0.0"
requests = "^2.24.0"
click-help-colors = "^0.9"
types-requests = "^2.25.0"
click = "^8.0.1"
click-didyoumean = "^0.3.0"
dotmap = "^1.3.30"
beartype = "^0.19"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "<1.0"
pylint = "^3.0.0"
coverage-badge = "^1.0.1"
restructuredtext-lint = "^1.3.2"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
mypy = "^1.2.0"
pytest-click = "^1.0.2"
mdformat = "^0.7.13"
pyright = "^1.1.260"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report term-missing:skip-covered --cov-report html --durations=0 --cov click_skeleton -s"

[tool.pylint.master]
jobs = 4
[tool.pylint.messages_control]
disable = """
too-few-public-methods,logging-format-interpolation,line-too-long,too-many-arguments,protected-access,too-many-public-methods,too-many-instance-attributes,duplicate-code,too-many-nested-blocks,too-many-branches,too-many-return-statements,too-many-statements,too-many-locals,too-many-ancestors,import-outside-toplevel,c-extension-no-member,logging-fstring-interpolation,too-many-positional-arguments
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
pretty = true
color_output = true
allow_redefinition = false
disallow_untyped_defs = true
error_summary = true
ignore_errors = false
implicit_reexport = false
local_partial_types = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
