[project]
name = "click-skeleton"
version = "0.32.0"
description = "Click app skeleton"
authors = [
    {name = "Adrien Pensart", email = "crunchengine@gmail.com"}
]
license = { file = "LICENSE-MIT" }
readme = "README.rst"
requires-python = ">=3.12"

dependencies = [
    "click-option-group>=0.5.1",
    "click-aliases>=1.0.1",
    "semver>=3.0.4",
    "requests>=2.24.0",
    "click-help-colors>=0.9",
    "types-requests>=2.32.0",
    "click>=8.1.8",
    "click-didyoumean>=0.3.0",
    "dotmap>=1.3.30",
    "beartype>=0.20"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["click_skeleton/"]
include = ["click_skeleton"]

[tool.ruff]
lint.ignore = ["E501"]

[tool.pyright]
include = [
    "click_skeleton",
    "examples",
    "standard_examples"
]
reportGeneralTypeIssues = false
reportIncompatibleMethodOverride = false
reportUnusedCallResult = true
reportAssignmentType = false

[tool.uv]
dev-dependencies = [
    "black>=25.1",
    "ruff<1.0",
    "pylint>=3.3.4",
    "coverage-badge>=1.0.1",
    "pytest-cov>=6.0.0",
    "flake8>=7.1.2",
    "mypy>=1.15.0",
    "pytest-click>=1.0.2",
    "mdformat>=0.7.22",
    "pyright>=1.1.396",
    "rstcheck>=6.2.4"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report term-missing:skip-covered --cov-report html --durations=0 --cov click_skeleton -s"

[tool.pylint.master]
jobs = 4
[tool.pylint.messages_control]
disable = """
too-few-public-methods,logging-format-interpolation,line-too-long,too-many-arguments,protected-access,too-many-public-methods,too-many-instance-attributes,duplicate-code,too-many-nested-blocks,too-many-branches,too-many-return-statements,too-many-statements,too-many-locals,too-many-ancestors,import-outside-toplevel,c-extension-no-member,logging-fstring-interpolation,too-many-positional-arguments
"""

[tool.mypy]
pretty = true
color_output = true
allow_redefinition = false
disallow_untyped_defs = true
error_summary = true
ignore_errors = false
implicit_reexport = false
local_partial_types = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
